<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Matte</string>
    <string name="entermessage">Enter Message</string>
    <string name="send">Send</string>
    <string name="settings">Settings</string>
    <string name="addServer">Add Server</string>
    <string name="name">Name</string>
    <string name="hostname">Hostname</string>
    <string name="port">Port</string>
    <string name="defaultport">6667</string>
    <string name="ssl">SSL</string>
    <string name="verifyssl">Verify SSL</string>
    <string name="password">Password</string>
    <string name="nicknames">Nicknames</string>
    <string name="optional">(Optional)</string>
    <string name="nickhint">Nick1,Nick2,Nick3</string>
    <string name="username">Username</string>
    <string name="realname">Realname</string>
    <string name="autoconnect_commands">Autoconnect Commands</string>
    <string name="one_per_line">(Optional) One command per line</string>
    <string name="connectatstartup">Connect at startup</string>
    <string name="log">Log</string>
    <string name="hosthint">irc.lolipower.org</string>
    <string name="quit">Quit</string>
    <string name="channel_hint">Enter Message</string>
    <string name="server_hint">Type \"/join #channelname\"</string>
    <string name="welcome0">Hey There</string>
    <string name="welcome1">Welcome to Matte. \n\nMatte is basically what we see as a simple, sweet-looking and intuitive IRC client.</string>
    <string name="welcome2">To do most of the things you\'re familiar with in IRC, simply use commands such as /join /nick and long-press channels in the channel list.</string>
    <string name="likeapp">If you like the app, want to send us images of your member or have some things you want added\n\n-Join #moeIO @ irc.rizon.net\n-Fork us on www.github.com/moeIO/matte\n (we\'re open source!)\n-Drop us an email on moeIOdevs@gmail.com</string>
    <string name="code">Code</string>
    <string name="ui">UI</string>
    <string name="aureax">auREAX</string>
    <string name="guykun">Guy-kun</string>
    <string name="enteraserver">You need to enter a server name</string>
    <string name="enteranick">You need a nickname silly :(</string>
    <string name="serverexists">A server with this name already exists</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="part">Part</string>
    <string name="users">Users</string>
    <string name="copy">Copy</string>
    <string name="cantmessageserver">Can\'t send messages to a server, it will never respond. :(</string>
    <string name="about">About</string>
    <string name="disconnectederror">Error: Disconnected</string>
    <string name="hasquit">has quit</string>
    <string name="hasjoined">has joined</string>
    <string name="hasleft">has left</string>
    <string name="nowknownas">is now known as</string>
    <string name="changedtopic">changed the topic to</string>
    <string name="stopicis">\'s topic is</string>
    <string name="running">Running</string>
    <string name="requested">Requested</string>
    <string name="couldnotconnectserver">Could not connect to server</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="clientalreadyconnected">The client is already connected to an IRC server.  Disconnect first.</string>
    <string name="couldnotlogin">Could not log into the IRC server</string>
    <string name="invalidchannel">Invalid channel name</string>
    <string name="nickinuse">Nickname is already in use</string>
    <string name="cool">Cool</string>
    
</resources>