<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303030"
    android:orientation="vertical" >

    <ExpandableListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="#e3e3e3"
        android:dividerHeight="0px"
        android:footerDividersEnabled="false"
        android:groupIndicator="@null" >
    </ExpandableListView>

    <Button
        android:id="@+id/addServerButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="0"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/addServer"
        android:textColor="#9f9f9f"
        android:textSize="14dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/settingsButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="0"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/settings"
        android:textColor="#9f9f9f"
        android:textSize="14dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/quitButton"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="1dp"
        android:layout_weight="0"
        android:gravity="left|center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/quit"
        android:textColor="#9f9f9f"
        android:textSize="14dp"
        android:textStyle="bold" />

</LinearLayout>