<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="auREAX"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp" android:textStyle="bold"/>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Guy-kun"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp" android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/ui"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Guy-kun"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="15dp" android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/likeapp"
            android:autoLink="web"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="13dp" />
    </LinearLayout>

</ScrollView>